--- a/MyFit v.1/MyFit/Base.lproj/LaunchScreen.xib
+++ b/MyFit v.1/MyFit/Base.lproj/LaunchScreen.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -7,20 +7,29 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="438" height="770"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="yHv-iL-RcR">
-                    <rect key="frame" x="0.0" y="0.0" width="438" height="820"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="yHv-iL-RcR">
+                    <rect key="frame" x="50" y="79" width="317" height="476"/>
                     <animations/>
                 </imageView>
             </subviews>
             <animations/>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="yHv-iL-RcR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="2Hl-Vz-YuR"/>
+                <constraint firstItem="yHv-iL-RcR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="C1q-yG-xRe"/>
+                <constraint firstItem="yHv-iL-RcR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Xtc-qC-TRS"/>
+                <constraint firstAttribute="bottom" secondItem="yHv-iL-RcR" secondAttribute="bottom" id="bNy-ss-X9S"/>
+                <constraint firstAttribute="trailing" secondItem="yHv-iL-RcR" secondAttribute="trailing" id="cR1-ke-t8U"/>
+                <constraint firstAttribute="bottom" secondItem="yHv-iL-RcR" secondAttribute="bottom" id="fw6-3h-TqW"/>
+                <constraint firstItem="yHv-iL-RcR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ylV-rQ-Xwn"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
-            <point key="canvasLocation" x="547" y="454"/>
+            <point key="canvasLocation" x="358" y="341"/>
         </view>
     </objects>
     <resources>
